--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,4 @@ export(GeomFitText)
 export(geom_fill_text)
 export(geom_fit_text)
 export(geom_shrink_text)
-export(makeContent.shrinktexttree)
+export(makeContent.fittexttree)
