--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: ggfittext
-Title: Fit Text Inside A Box
+Title: Fit Text Inside a Box
 Version: 0.4.1
 Authors@R: person("David", "Wilkins", email = "david@wilkox.org",
                   role = c("aut", "cre"))
@@ -14,3 +14,5 @@ Imports:
     stringi (>= 1.1.2),
     ggplot2 (>= 2.2.1)
 RoxygenNote: 5.0.1
+URL: https://github.com/wilkox/ggfittext
+BugReports: https://github.com/wilkox/ggfittext/issues
