--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,12 @@ Depends:
 License: GPL-2
 LazyData: true
 Imports:
-    grid,
+    grid (>= 3.4.1),
     stringi (>= 1.1.2),
     ggplot2 (>= 2.2.1)
 RoxygenNote: 5.0.1
 URL: https://github.com/wilkox/ggfittext
 BugReports: https://github.com/wilkox/ggfittext/issues
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
