--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: ggfittext
-Title: Fit Text Inside a Box
+Title: Fit Text Inside a Box in 'ggplot2'
 Version: 0.4.2
 Authors@R: person("David", "Wilkins", email = "david@wilkox.org",
                   role = c("aut", "cre"))
-Description: Provides ggplot2 geoms to fit text into a box by growing, shrinking
+Description: Provides 'ggplot2' geoms to fit text into a box by growing, shrinking
     or wrapping the text.
 Depends:
     R (>= 3.3.2)
