--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ggfittext
 Title: Fit Text Inside a Box in 'ggplot2'
-Version: 0.6.0.9001
+Version: 0.6.0.9002
 Authors@R: person("David", "Wilkins", email = "david@wilkox.org",
                   role = c("aut", "cre"))
 Description: Provides 'ggplot2' geoms to fit text into a box by growing, shrinking
@@ -18,5 +18,6 @@ URL: https://github.com/wilkox/ggfittext
 BugReports: https://github.com/wilkox/ggfittext/issues
 Suggests: knitr,
     rmarkdown,
-    testthat
+    testthat,
+    vdiffr
 VignetteBuilder: knitr
