--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,11 @@ r:
 - release
 - devel
 
+r_packages:
+- ggplot2
+
+r_github_packages:
+- r-lib/vdiffr
+
 after_success:
   - Rscript -e 'covr::codecov()'
