--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ LazyData: true
 Imports:
     grid (>= 3.1),
     stringi (>= 1.1.2),
-    ggplot2 (>= 2.2.1)
+    ggplot2 (>= 2.2.1),
+    shades (>= 1.3.1)
 RoxygenNote: 6.1.1
 URL: https://github.com/wilkox/ggfittext
 BugReports: https://github.com/wilkox/ggfittext/issues
