--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Imports:
     ggplot2 (>= 2.2.1),
     shades (>= 1.3.1)
 RoxygenNote: 6.1.1
-URL: https://github.com/wilkox/ggfittext
+URL: https://wilkox.org/ggfittext
 BugReports: https://github.com/wilkox/ggfittext/issues
 Suggests: knitr,
     rmarkdown,
