--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,8 @@ Imports:
     ggplot2 (>= 2.2.1),
     shades (>= 1.3.1)
 RoxygenNote: 7.1.1
-URL: https://wilkox.org/ggfittext
-BugReports: https://github.com/wilkox/ggfittext/issues
+URL: https://wilkox.org/ggfittext/
+BugReports: https://github.com/wilkox/ggfittext/issues/
 Suggests: 
     knitr,
     rmarkdown,
