--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,13 +6,13 @@ Authors@R: person("David", "Wilkins", email = "david@wilkox.org",
 Description: Provides 'ggplot2' geoms to fit text into a box by growing, shrinking
     or wrapping the text.
 Depends:
-    R (>= 3.6)
+    R (>= 3.6),
+    ggplot2 (>= 2.2.1)
 License: GPL-2
 LazyData: true
 Imports:
     grid (>= 3.1),
     stringi (>= 1.1.2),
-    ggplot2 (>= 2.2.1),
     shades (>= 1.3.1)
 RoxygenNote: 7.1.1
 URL: https://wilkox.org/ggfittext/
