--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ggfittext
 Title: Fit Text Inside a Box in 'ggplot2'
-Version: 0.10.1
+Version: 0.10.1.9001
 Authors@R: c(person("David", "Wilkins", email = "david@wilkox.org",
                   role = c("aut", "cre")), 
              person("Brady", "Johnston", email = "brady.johnston@me.com", 
@@ -16,7 +16,8 @@ Imports:
     stringi (>= 1.1.2),
     shades (>= 1.3.1),
     gridtext (>= 0.1.4),
-    ggplot2 (>= 2.2.1)
+    ggplot2 (>= 2.2.1),
+    cli (>= 3.6.1)
 RoxygenNote: 7.2.3
 URL: https://wilkox.org/ggfittext/
 BugReports: https://github.com/wilkox/ggfittext/issues/
